Fixed up the vertical align of sidebar buttons text

--- a/app/styles/theme-default/sidemenu.less
+++ b/app/styles/theme-default/sidemenu.less
@@ -10,7 +10,7 @@
     min-height   : 50px;
     max-height   : 50px;
     padding-left : 20px;
-    padding-top  : 20px;
+    padding-top  : 15px;
 
     // Colors
     background : @sidemenu--item;
